@@ -35,6 +35,7 @@
 #include "V3Os.h"
 #include "V3ParseBison.h"  // Generated by bison
 #include "V3PreShell.h"
+#include "V3Stats.h"
 
 #include <sstream>
 
@@ -247,24 +248,22 @@ size_t V3ParseImp::ppInputToLex(char* buf, size_t max_size) {
     return got;
 }
 
-void V3ParseImp::preprocDumps(std::ostream& os) {
-    if (v3Global.opt.dumpDefines()) {
-        V3PreShell::dumpDefines(os);
-    } else {
-        const bool noblanks = v3Global.opt.preprocOnly() && v3Global.opt.preprocNoLine();
-        for (auto& buf : m_ppBuffers) {
-            if (noblanks) {
-                bool blank = true;
-                for (string::iterator its = buf.begin(); its != buf.end(); ++its) {
-                    if (!std::isspace(*its) && *its != '\n') {
-                        blank = false;
-                        break;
-                    }
+void V3ParseImp::preprocDumps(std::ostream& os, bool forInputs) {
+    bool noblanks = forInputs || (v3Global.opt.preprocOnly() && v3Global.opt.preprocNoLine());
+    bool nolines = forInputs;
+    for (auto& buf : m_ppBuffers) {
+        if (noblanks) {
+            bool blank = true;
+            for (string::iterator its = buf.begin(); its != buf.end(); ++its) {
+                if (!std::isspace(*its) && *its != '\n') {
+                    blank = false;
+                    break;
                 }
-                if (blank) continue;
             }
-            os << buf;
+            if (blank) continue;
+            if (nolines && buf.rfind("`line ", 0) == 0) continue;
         }
+        os << buf;
     }
 }
 
@@ -292,7 +291,7 @@ void V3ParseImp::parseFile(FileLine* fileline, const string& modfilename, bool i
     if (v3Global.opt.preprocOnly() || v3Global.opt.keepTempFiles()) {
         // Create output file with all the preprocessor output we buffered up
         const string vppfilename = v3Global.opt.hierTopDataDir() + "/" + v3Global.opt.prefix()
-                                   + "_" + nondirname + ".vpp";
+                                   + "__" + nondirname + ".vpp";
         std::ofstream* ofp = nullptr;
         std::ostream* osp;
         if (v3Global.opt.preprocOnly()) {
@@ -303,14 +302,19 @@ void V3ParseImp::parseFile(FileLine* fileline, const string& modfilename, bool i
         if (osp->fail()) {
             fileline->v3error("Cannot write preprocessor output: " + vppfilename);
             return;
+        }
+        if (v3Global.opt.dumpDefines()) {
+            V3PreShell::dumpDefines(*osp);
         } else {
-            preprocDumps(*osp);
-            if (ofp) {
-                ofp->close();
-                VL_DO_DANGLING(delete ofp, ofp);
-            }
+            preprocDumps(*osp, false);
+        }
+        if (ofp) {
+            ofp->close();
+            VL_DO_DANGLING(delete ofp, ofp);
         }
     }
+
+    if (debug() && modfilename != V3Options::getStdPackagePath()) dumpInputsFile();
 
     // Parse it
     if (!v3Global.opt.preprocOnly()) {
@@ -318,6 +322,31 @@ void V3ParseImp::parseFile(FileLine* fileline, const string& modfilename, bool i
     } else {
         m_ppBuffers.clear();
     }
+}
+
+void V3ParseImp::dumpInputsFile() {
+    // Create output file with joined preprocessor output we buffered up,
+    // Useful for debug to feed back into Verilator
+    static bool append = false;
+    const string vppfilename
+        = v3Global.opt.hierTopDataDir() + "/" + v3Global.opt.prefix() + "__inputs.vpp";
+    std::ofstream* ofp = V3File::new_ofstream(vppfilename, append);
+    if (ofp->fail()) {
+        v3error("Cannot write preprocessor output: " + vppfilename);
+        return;
+    }
+    if (!append) {
+        append = true;
+        UINFO(1, "Writing all preprocessed output to " << vppfilename << endl);
+        *ofp << "// Dump of all post-preprocessor input\n";
+        *ofp << "// Blank lines and `line directives have been removed\n";
+        *ofp << "//\n";
+        V3Stats::infoHeader(*ofp, "// ");
+    }
+    *ofp << "\n";
+    preprocDumps(*ofp, true);
+    ofp->close();
+    VL_DO_DANGLING(delete ofp, ofp);
 }
 
 void V3ParseImp::lexFile(const string& modname) {
